correct swagger
